# lazyjira

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
assets/screenshots/: filter-panel.tape  issue-detail.tape  issue-list.tape
docs/01-lazyjira/: [PRD] LazyJira TUI Application.md  [Task 1.1] Infrastructure - Project scaffolding and dependencies.md  [Task 1.2] Infrastructure - Application architecture and main loop.md  [Task 1.3] Config - Configuration file structure and loading.md  [Task 1.4] API - JIRA client with basic authentication.md  [Task 1.5] API - Issue data types and parsing.md  [Task 1.6] UI - Issue list view with basic columns.md  [Task 1.7] UI - Issue detail view (read-only).md  [Task 1.8] Infrastructure - Error handling and user feedback.md  [Task 1.9] Infrastructure - Logging with tracing.md  [Task 2.1] Config - Multiple profile support with switching.md  [Task 2.2] UI - Profile management TUI.md  [Task 2.3] UI - Filter panel with common filters.md  [Task 2.4] UI - JQL query input support.md  [Task 2.5] UI - Issue sorting and pagination.md  [Task 2.6] UI - Quick search within loaded issues.md  [Task 2.7] Cache - Issue caching for offline viewing.md  [Task 3.1] API - Issue update operations.md  [Task 3.2] UI - Edit issue summary and description.md  [Task 3.3] UI - Status transitions.md  [Task 3.4] UI - Assignee and priority changes.md  [Task 3.5] UI - Comments viewing and creation.md  [Task 4.2] UI - Theme support.md  (+9 more)
src/: app.rs  error.rs  logging.rs  main.rs  tasks.rs
(+66 files in other folders)
