[package]
name = "lazyjira"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A terminal-based user interface for JIRA"
authors = ["LazyJira Contributors"]
license = "MIT"
repository = "https://github.com/lazyjira/lazyjira"
keywords = ["jira", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
terminput = "0.2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
dirs = "5.0"
keyring = "2.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
urlencoding = "2.1"
walkdir = "2.5"
open = "5.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
